--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,9 @@
     <string name="name">Nome</string>
     <string name="password_confirmation">Confirmar senha</string>
     <string name="profile">Perfil</string>
+    <string name="All_activities">Todas as atividades</string>
+    <string name="home">Home</string>
+    <string name="events">Events</string>
+    <string name="payments">Payments</string>
+    <string name="settings">Settings</string>
 </resources>
