--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="register_barbecue">Novo evento</string>
     <string name="url_image">Url da imagem</string>
     <string name="load">Carregar</string>
+    <string name="description">Descrição</string>
 </resources>
